[gd_scene load_steps=51 format=3 uid="uid://goesjr3wcc5e"]

[ext_resource type="Script" path="res://player/scripts/player.gd" id="1_y0msa"]
[ext_resource type="Texture2D" uid="uid://dutxnnf1cxu0n" path="res://player/sprites/player_sprite/crouch/player8.png" id="2_icfrn"]
[ext_resource type="Texture2D" uid="uid://b4iaif1111svv" path="res://player/sprites/player_sprite/fall/player4.png" id="4_4lyso"]
[ext_resource type="Texture2D" uid="uid://dwb8x7o3k1lwu" path="res://player/sprites/player_sprite/fall/player5.png" id="5_gfry5"]
[ext_resource type="Texture2D" uid="uid://qktnghhgjraj" path="res://player/sprites/player_sprite/fall/player6.png" id="6_jkpk7"]
[ext_resource type="Texture2D" uid="uid://bx6v28wghs0b7" path="res://player/sprites/player_sprite/fall/player7.png" id="7_tgv6e"]
[ext_resource type="Texture2D" uid="uid://dfprd87ypisat" path="res://player/sprites/player_sprite/idle/player10.png" id="8_3l2j4"]
[ext_resource type="Texture2D" uid="uid://dvqa4y8esdq1b" path="res://player/sprites/player_sprite/idle/player11.png" id="9_p8ftf"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="9_ucqyb"]
[ext_resource type="Script" path="res://player/scripts/player_idle.gd" id="10_ahiiq"]
[ext_resource type="Texture2D" uid="uid://dunbae6jtel6g" path="res://player/sprites/player_sprite/idle/player12.png" id="10_b01h2"]
[ext_resource type="Script" path="res://player/scripts/player_walk.gd" id="11_0xrpy"]
[ext_resource type="Texture2D" uid="uid://c4osw28djwmpd" path="res://player/sprites/player_sprite/idle/player13.png" id="11_a1utf"]
[ext_resource type="Script" path="res://player/scripts/player_state.gd" id="11_cxq27"]
[ext_resource type="Texture2D" uid="uid://b21irc0t53dkw" path="res://player/sprites/player_sprite/jump/player1.png" id="12_lc8dm"]
[ext_resource type="Script" path="res://player/scripts/player_jump.gd" id="12_vnjao"]
[ext_resource type="Texture2D" uid="uid://cutxq6sc2o6ir" path="res://player/sprites/player_sprite/jump/player2.png" id="13_c3etw"]
[ext_resource type="Script" path="res://player/scripts/player_fall.gd" id="13_s6tp6"]
[ext_resource type="Script" path="res://player/scripts/player_dash.gd" id="14_b05cy"]
[ext_resource type="Texture2D" uid="uid://r0q1kf0sy17t" path="res://player/sprites/player_sprite/jump/player3.png" id="14_eu10j"]
[ext_resource type="Texture2D" uid="uid://geupacnbm6hk" path="res://player/sprites/player_sprite/jump/player4.png" id="15_ler38"]
[ext_resource type="Script" path="res://player/scripts/player_crouch.gd" id="15_rc3xp"]
[ext_resource type="Texture2D" uid="uid://cahdpxar5as2q" path="res://player/sprites/player_sprite/shoot/player14.png" id="16_ly4dd"]
[ext_resource type="Texture2D" uid="uid://cyncr7woomri2" path="res://player/sprites/player_sprite/shoot/player15.png" id="17_bbpd8"]
[ext_resource type="Script" path="res://player/scripts/player_shoot.gd" id="18_ph725"]
[ext_resource type="Texture2D" uid="uid://bku5yjvb7r0eb" path="res://player/sprites/player_sprite/shoot/player16.png" id="18_ynfxq"]
[ext_resource type="Texture2D" uid="uid://kd5pq2aivqpa" path="res://player/sprites/player_sprite/shoot/player17.png" id="19_0edfl"]
[ext_resource type="PackedScene" uid="uid://du3w6se4y2ofr" path="res://shooter/shooter.tscn" id="20_fcchc"]
[ext_resource type="Texture2D" uid="uid://dbpnbi21xai8l" path="res://player/sprites/player_sprite/run/player18.png" id="20_imdsv"]
[ext_resource type="Texture2D" uid="uid://dayejop2gfa86" path="res://player/sprites/player_sprite/run/player19.png" id="21_0ekp4"]
[ext_resource type="Texture2D" uid="uid://yugkjpls8fpg" path="res://player/sprites/player_sprite/run/player20.png" id="22_siqap"]
[ext_resource type="Texture2D" uid="uid://cbkkoduw6yrvh" path="res://player/sprites/player_sprite/run/player21.png" id="23_cvih7"]
[ext_resource type="Script" path="res://player/scripts/player_hurt.gd" id="23_jsqvn"]
[ext_resource type="AudioStream" uid="uid://bav78rkr8j8" path="res://audio/Dirt-20240322T042502Z-001/Dirt/Steps_dirt-001.ogg" id="23_wvscm"]
[ext_resource type="AudioStream" uid="uid://np7iis2q3wjc" path="res://audio/jump-sfx.mp3" id="24_g2m2w"]
[ext_resource type="Texture2D" uid="uid://dq0btlheom7fh" path="res://player/sprites/player_sprite/run/player22.png" id="24_iujc7"]
[ext_resource type="Texture2D" uid="uid://cf7ntbb7p5g16" path="res://player/sprites/player_sprite/run/player23.png" id="25_8n468"]
[ext_resource type="AudioStream" uid="uid://bjsrvtjp2m2of" path="res://audio/jump-landing.mp3" id="25_ium4o"]
[ext_resource type="Texture2D" uid="uid://b4mqeo3ljanc" path="res://player/sprites/player_sprite/run/player24.png" id="26_cmt7o"]
[ext_resource type="Texture2D" uid="uid://ccxwcgvh3hdqk" path="res://player/sprites/player_sprite/run/player25.png" id="27_dw7cp"]
[ext_resource type="Texture2D" uid="uid://srq8c5wd24dt" path="res://player/sprites/player_sprite/run/player26.png" id="28_2s710"]
[ext_resource type="Texture2D" uid="uid://lyx416kbdy0m" path="res://player/sprites/player_sprite/run/player27.png" id="29_t1k7q"]
[ext_resource type="Texture2D" uid="uid://cduyg38v8hra7" path="res://player/sprites/player_sprite/run/player28.png" id="30_otgbw"]
[ext_resource type="Texture2D" uid="uid://beo7eouyef22b" path="res://player/sprites/player_sprite/run/player29.png" id="31_plpxa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k5i7g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_icfrn")
}],
"loop": false,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_imdsv")
}, {
"duration": 1.0,
"texture": ExtResource("21_0ekp4")
}],
"loop": false,
"name": &"dash",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4lyso")
}, {
"duration": 1.0,
"texture": ExtResource("5_gfry5")
}, {
"duration": 1.0,
"texture": ExtResource("6_jkpk7")
}, {
"duration": 1.0,
"texture": ExtResource("7_tgv6e")
}],
"loop": false,
"name": &"fall",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3l2j4")
}, {
"duration": 1.0,
"texture": ExtResource("9_p8ftf")
}, {
"duration": 1.0,
"texture": ExtResource("10_b01h2")
}, {
"duration": 1.0,
"texture": ExtResource("11_a1utf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_lc8dm")
}, {
"duration": 1.0,
"texture": ExtResource("13_c3etw")
}, {
"duration": 1.0,
"texture": ExtResource("14_eu10j")
}, {
"duration": 1.0,
"texture": ExtResource("15_ler38")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_ly4dd")
}, {
"duration": 1.0,
"texture": ExtResource("17_bbpd8")
}, {
"duration": 1.0,
"texture": ExtResource("18_ynfxq")
}, {
"duration": 1.0,
"texture": ExtResource("19_0edfl")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_imdsv")
}, {
"duration": 1.0,
"texture": ExtResource("21_0ekp4")
}, {
"duration": 1.0,
"texture": ExtResource("22_siqap")
}, {
"duration": 0.5,
"texture": ExtResource("23_cvih7")
}, {
"duration": 0.5,
"texture": ExtResource("24_iujc7")
}, {
"duration": 1.0,
"texture": ExtResource("25_8n468")
}, {
"duration": 1.0,
"texture": ExtResource("26_cmt7o")
}, {
"duration": 1.0,
"texture": ExtResource("27_dw7cp")
}, {
"duration": 1.0,
"texture": ExtResource("28_2s710")
}, {
"duration": 0.5,
"texture": ExtResource("29_t1k7q")
}, {
"duration": 0.5,
"texture": ExtResource("30_otgbw")
}, {
"duration": 1.0,
"texture": ExtResource("31_plpxa")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu3rx"]
size = Vector2(26, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6kc84"]
size = Vector2(35.5874, 93.3959)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ii2oo"]
radius = 19.0
height = 73.2893

[sub_resource type="Animation" id="Animation_5pchd"]
resource_name = "invincible"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ywk4"]
_data = {
"invincible": SubResource("Animation_5pchd")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 32
script = ExtResource("1_y0msa")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -29)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_k5i7g")
animation = &"dash"

[node name="Ledgebox" type="CollisionShape2D" parent="."]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_iu3rx")

[node name="LeftInnerRayCast" type="RayCast2D" parent="Ledgebox"]
position = Vector2(-3.5, -31)
target_position = Vector2(0, -16)

[node name="RightInnerRayCast" type="RayCast2D" parent="Ledgebox"]
position = Vector2(4.5, -31)
target_position = Vector2(0, -16)

[node name="LeftOuterRayCast" type="RayCast2D" parent="Ledgebox"]
position = Vector2(-12.5, -31)
target_position = Vector2(0, -16)

[node name="RightOuterRayCast" type="RayCast2D" parent="Ledgebox"]
position = Vector2(12.5, -31)
target_position = Vector2(0, -16)

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.820979, 0.712393)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.175493, 1.40372)
scale = Vector2(0.880045, 0.906717)
shape = SubResource("RectangleShape2D_6kc84")

[node name="ShootCD" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ShootDuration" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DashCD" type="Timer" parent="."]
one_shot = true

[node name="DoubleTapTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="InputBuffer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_ucqyb")
initial_state = NodePath("PlayerState/PlayerFall")

[node name="PlayerState" type="Node" parent="StateMachine"]
script = ExtResource("11_cxq27")

[node name="PlayerIdle" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("10_ahiiq")

[node name="PlayerWalk" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("11_0xrpy")

[node name="PlayerJump" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("12_vnjao")

[node name="PlayerFall" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("13_s6tp6")

[node name="PlayerDash" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("14_b05cy")

[node name="PlayerCrouch" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("15_rc3xp")

[node name="PlayerShoot" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("18_ph725")

[node name="PlayerHurt" type="Node" parent="StateMachine/PlayerState"]
script = ExtResource("23_jsqvn")

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("23_wvscm")
bus = &"SFX"

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("24_g2m2w")
bus = &"SFX"

[node name="JumpLanding" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("25_ium4o")
bus = &"SFX"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -19)
scale = Vector2(0.665567, 0.818673)
shape = SubResource("CapsuleShape2D_ii2oo")

[node name="Shooter" parent="." instance=ExtResource("20_fcchc")]
speed = 400.0
life_span = 0.8
shoot_delay = 0.8

[node name="AnimationPlayerInvincible" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ywk4")
}

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Hitbox" to="StateMachine/PlayerState/PlayerHurt" method="_on_hitbox_area_entered"]
[connection signal="timeout" from="ShootDuration" to="StateMachine/PlayerState" method="_on_shoot_duration_timeout"]
[connection signal="timeout" from="DashCD" to="StateMachine/PlayerState" method="_on_dash_cd_timeout"]
[connection signal="timeout" from="DoubleTapTimer" to="StateMachine/PlayerState" method="_on_double_tap_timer_timeout"]
[connection signal="timeout" from="InputBuffer" to="StateMachine/PlayerState" method="_on_input_buffer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
